provisioning_api: Add OpenAPI spec
