# apps/provisioning_api/openapi.json
@@ -325,45 +325,30 @@
                 "type": "object",
                 "required": [
                     "additional_mail",
-                    "additional_mailScope",
                     "address",
-                    "addressScope",
-                    "avatarScope",
                     "backend",
                     "backendCapabilities",
                     "biography",
-                    "biographyScope",
-                    "displayname",
                     "display-name",
-                    "displaynameScope",
+                    "displayname",
                     "email",
-                    "emailScope",
-                    "enabled",
                     "fediverse",
-                    "fediverseScope",
                     "groups",
                     "headline",
-                    "headlineScope",
                     "id",
                     "language",
                     "lastLogin",
                     "locale",
+                    "manager",
                     "notify_email",
                     "organisation",
-                    "organisationScope",
                     "phone",
-                    "phoneScope",
                     "profile_enabled",
-                    "profile_enabledScope",
                     "quota",
                     "role",
-                    "roleScope",
-                    "storageLocation",
                     "subadmin",
                     "twitter",
-                    "twitterScope",
-                    "website",
-                    "websiteScope"
+                    "website"
                 ],
                 "properties": {
                     "additional_mail": {
@@ -374,7 +359,6 @@
                     },
                     "additional_mailScope": {
                         "type": "array",
-                        "nullable": true,
                         "items": {
                             "type": "string"
                         }
@@ -383,12 +367,10 @@
                         "type": "string"
                     },
                     "addressScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "avatarScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "backend": {
                         "type": "string"
@@ -412,38 +394,32 @@
                         "type": "string"
                     },
                     "biographyScope": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "displayname": {
                         "type": "string"
                     },
                     "display-name": {
                         "type": "string"
                     },
+                    "displayname": {
+                        "type": "string"
+                    },
                     "displaynameScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "email": {
                         "type": "string",
                         "nullable": true
                     },
                     "emailScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "enabled": {
-                        "type": "boolean",
-                        "nullable": true
+                        "type": "boolean"
                     },
                     "fediverse": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "fediverseScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "groups": {
                         "type": "array",
@@ -455,8 +431,7 @@
                         "type": "string"
                     },
                     "headlineScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "id": {
                         "type": "string"
@@ -471,6 +446,9 @@
                     "locale": {
                         "type": "string"
                     },
+                    "manager": {
+                        "type": "string"
+                    },
                     "notify_email": {
                         "type": "string",
                         "nullable": true
@@ -479,78 +457,31 @@
                         "type": "string"
                     },
                     "organisationScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "phone": {
                         "type": "string"
                     },
                     "phoneScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "profile_enabled": {
                         "type": "string"
                     },
                     "profile_enabledScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "quota": {
-                        "type": "object",
-                        "required": [
-                            "free",
-                            "quota",
-                            "relative",
-                            "total",
-                            "used"
-                        ],
-                        "properties": {
-                            "free": {
-                                "type": "integer",
-                                "format": "int64",
-                                "nullable": true
-                            },
-                            "quota": {
-                                "oneOf": [
-                                    {
-                                        "type": "string"
-                                    },
-                                    {
-                                        "type": "integer",
-                                        "format": "int64"
-                                    },
-                                    {
-                                        "type": "boolean"
-                                    }
-                                ]
-                            },
-                            "relative": {
-                                "type": "number",
-                                "format": "float",
-                                "nullable": true
-                            },
-                            "total": {
-                                "type": "integer",
-                                "format": "int64",
-                                "nullable": true
-                            },
-                            "used": {
-                                "type": "integer",
-                                "format": "int64"
-                            }
-                        }
+                        "$ref": "#/components/schemas/UserDetailsQuota"
                     },
                     "role": {
                         "type": "string"
                     },
                     "roleScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "storageLocation": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "subadmin": {
                         "type": "array",
@@ -562,15 +493,45 @@
                         "type": "string"
                     },
                     "twitterScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "website": {
                         "type": "string"
                     },
                     "websiteScope": {
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
+                    }
+                }
+            },
+            "UserDetailsQuota": {
+                "type": "object",
+                "properties": {
+                    "free": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "quota": {
+                        "oneOf": [
+                            {
+                                "type": "number",
+                                "format": "float"
+                            },
+                            {
+                                "type": "string"
+                            }
+                        ]
+                    },
+                    "relative": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "total": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "used": {
+                        "type": "number",
+                        "format": "float"
                     }
                 }
             }
@@ -3576,7 +3537,7 @@
                         }
                     },
                     "403": {
-                        "description": "App not allowed",
+                        "description": "App is not allowed",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -3718,7 +3679,7 @@
                         }
                     },
                     "403": {
-                        "description": "App not allowed",
+                        "description": "App is not allowed",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -3850,7 +3811,7 @@
                         }
                     },
                     "403": {
-                        "description": "App or key not allowed",
+                        "description": "App or key is not allowed",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -3974,7 +3935,7 @@
                         }
                     },
                     "403": {
-                        "description": "App or key not allowed",
+                        "description": "App or key is not allowed",
                         "content": {
                             "application/json": {
                                 "schema": {
